Fixed Header Gap on Feedback

--- a/styleClientFeedbacks.css
+++ b/styleClientFeedbacks.css
@@ -13,21 +13,23 @@
   }
 body{
   padding-top: 200px;
+  margin: 0; /* Add this line to remove the default margin */
 }
+
 header {
-  font-family: 'Poppinsss', sans-serif;
-  background-color: #004AAD;
-  color: #004AAD; /* Adjusted text color for better contrast */
-  padding: 0px 0;
-  height: 130px;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 1000;
+    font-family: sans-serif;
+    background-color: #004AAD;
+    color: #004AAD; /* Adjusted text color for better contrast */
+    padding: 0px 0;
+    height: 130px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
 }
-  
+
 .header-container {
-  display: flex;
+  display: flex;  
   justify-content: space-between;
   align-items: center;
   padding-bottom: 25px; /* Adjust to move the logo upwards */
